# tauriv2-vue-desktop-starter

./: .gitattributes  .gitignore  README.md  components.json  eslint.config.mjs  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.github/workflows/: pull-request-validation.yml  release.yml
docs/: native-feel-css.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/plugins/: logging.rs
src/assets/css/: main.css
src/components/: ThemeSwitch.test.ts
src/lib/: config.test.ts
